// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INTERACTIONS/InputText DefaultValues play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--neutral"
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText Demo play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--neutral"
             value="test"
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText DisabledAndStatusError play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--error"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText DisabledAndStatusNeutral play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--neutral"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText DisabledAndStatusSuccess play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText DisabledAndStatusSuccess play-test 2`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText DisabledAndStatusSuccess play-test 3`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText EnabledStatusError play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--error"
             value
      >
      <div data-testid="input-text-icon"
           class="input-text__icon"
      >
        <div class="status-icon status-icon--error status-icon--l status-icon--active">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText EnabledStatusNeutral play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--neutral"
             value
      >
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText EnabledStatusSuccess play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             value
      >
      <div data-testid="input-text-icon"
           class="input-text__icon"
      >
        <div class="status-icon status-icon--success status-icon--l status-icon--active">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText EnabledStatusSuccess play-test 2`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             value
      >
      <div data-testid="input-text-icon"
           class="input-text__icon"
      >
        <div class="status-icon status-icon--success status-icon--l status-icon--active">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText EnabledStatusSuccess play-test 3`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div data-testid="input-text-label"
         class="input-text__label"
    >
      <label for="firstName"
             class="label label--s label--neutral"
      >
        First name
      </label>
    </div>
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--success"
             value
      >
      <div data-testid="input-text-icon"
           class="input-text__icon"
      >
        <div class="status-icon status-icon--success status-icon--l status-icon--active">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`INTERACTIONS/InputText NoLabel play-test 1`] = `
<div style="max-width: 300px;">
  <div class="input-text">
    <div class="input-text__wrap">
      <input type="text"
             maxlength="12"
             name="firstName"
             id="firstName"
             placeholder
             class="input input--primary input--neutral"
             value
      >
    </div>
  </div>
</div>
`;
